--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -14,192 +14,194 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="@dimen/restaurant_info_padding_size"
         android:background="@color/white"
-        >
+        android:padding="@dimen/restaurant_info_padding_size">
 
-        <!--메뉴 제보하기 레이아웃-->
+        <!--메뉴, 메뉴 제보 레이아웃-->
         <LinearLayout
-            android:id="@+id/menu_report_layout"
+            android:id="@+id/retaurant_menu_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             app:layout_constraintBottom_toTopOf="@+id/restaurant_info_layout"
-            android:layout_marginBottom="10dp"
-            android:visibility="gone"
-            tool:visibility="visible"
-            >
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/borderGray"
-                />
-
-            <Button
-                android:id="@+id/menu_report_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:text="내가 먼저 메뉴 제보하기"
-                android:textSize="14dp"
-                android:textColor="@color/white"
-                android:fontFamily="@font/pretendard_semibold"
-                android:background="@drawable/color_button_background"
-                android:paddingVertical="0dp"
-                android:paddingHorizontal="36dp"
-                android:layout_marginVertical="16dp"
-                />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/borderGray"
-                android:layout_marginBottom="6dp"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="메뉴는 매일 11시에 업데이트됩니다."
-                android:layout_gravity="center"
-                android:textSize="10dp"
-                android:textColor="@color/black"
-                android:fontFamily="@font/pretendard_regular"
-                android:layout_marginBottom="6dp"
-                />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/borderGray"
-                />
-
-        </LinearLayout>
-
-        <!--메뉴 레이아웃-->
-        <LinearLayout
-            android:id="@+id/restaurant_menu_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/restaurant_info_layout"
+            app:layout_constraintVertical_chainStyle="spread_inside"
+            tool:layout_editor_absoluteX="10dp"
+            android:orientation="vertical"
             android:layout_marginBottom="10dp"
-            android:visibility="gone"
-            tool:visibility="gone"
             >
 
-            <!--메인 메뉴-->
+            <!--메뉴 제보하기 레이아웃-->
             <LinearLayout
+                android:id="@+id/menu_report_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="top"
-                android:orientation="horizontal"
-                android:weightSum="@dimen/restaurant_info_menu_weight_sum">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/restaurant_info_menu_title_weight"
-                    android:fontFamily="@font/pretendard_semibold"
-                    android:text="메인 메뉴"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="@dimen/restaurant_info_menu_text_size"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/restaurant_menu_main_tv"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/restaurant_info_menu_content_weight"
-                    android:fontFamily="@font/pretendard_regular"
-                    android:textColor="@color/gray900"
-                    android:textSize="@dimen/restaurant_info_menu_text_size"
-                    tool:text="카레 염지 순살치킨, 제육볶음, 알리오 올리오 스파게티, 닭강정, 봉황 감자탕" />
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="6dp"
-                android:layout_marginBottom="6dp"
-                android:background="@color/borderGray" />
-
-            <!--사이드 메뉴-->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="top"
-                android:orientation="horizontal"
-                android:weightSum="@dimen/restaurant_info_menu_weight_sum">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/restaurant_info_menu_title_weight"
-                    android:fontFamily="@font/pretendard_semibold"
-                    android:text="사이드 메뉴"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="@dimen/restaurant_info_menu_text_size"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/restaurant_menu_side_tv"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/restaurant_info_menu_content_weight"
-                    android:fontFamily="@font/pretendard_regular"
-                    android:textColor="@color/gray900"
-                    android:textSize="@dimen/restaurant_info_menu_text_size"
-                    tool:text="반찬 3종, 김치, 샐러드\n반찬반찬반찬" />
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="6dp"
-                android:layout_marginBottom="6dp"
-                android:background="@color/borderGray" />
-
-            <!--후식-->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="top"
-                android:orientation="horizontal"
-                android:weightSum="@dimen/restaurant_info_menu_weight_sum"
+                android:orientation="vertical"
+                android:visibility="gone"
+                tool:visibility="visible"
                 >
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/restaurant_info_menu_title_weight"
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/borderGray" />
+
+                <Button
+                    android:id="@+id/menu_report_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginVertical="16dp"
+                    android:background="@drawable/color_button_background"
                     android:fontFamily="@font/pretendard_semibold"
-                    android:text="후식"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="@dimen/restaurant_info_menu_text_size"
-                    android:textStyle="bold" />
+                    android:paddingHorizontal="36dp"
+                    android:paddingVertical="0dp"
+                    android:text="내가 먼저 메뉴 제보하기"
+                    android:textColor="@color/white"
+                    android:textSize="14dp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginBottom="6dp"
+                    android:background="@color/borderGray" />
 
                 <TextView
-                    android:id="@+id/restaurant_menu_dessert_tv"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/restaurant_info_menu_content_weight"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="6dp"
                     android:fontFamily="@font/pretendard_regular"
-                    android:textColor="@color/gray900"
-                    android:textSize="@dimen/restaurant_info_menu_text_size"
-                    tool:text="토스트(누텔라, 딸기잼), 매실차\n디저트디저트디저트" />
+                    android:text="메뉴는 매일 11시에 업데이트됩니다."
+                    android:textColor="@color/black"
+                    android:textSize="10dp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/borderGray" />
 
             </LinearLayout>
 
-            <View
+            <!--메뉴 레이아웃-->
+            <LinearLayout
+                android:id="@+id/restaurant_menu_layout"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="6dp"
-                android:background="@color/borderGray" />
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="gone"
+                tool:visibility="gone">
+
+                <!--메인 메뉴-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="top"
+                    android:orientation="horizontal"
+                    android:weightSum="@dimen/restaurant_info_menu_weight_sum">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="@dimen/restaurant_info_menu_title_weight"
+                        android:fontFamily="@font/pretendard_semibold"
+                        android:text="메인 메뉴"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="@dimen/restaurant_info_menu_text_size"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/restaurant_menu_main_tv"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="@dimen/restaurant_info_menu_content_weight"
+                        android:fontFamily="@font/pretendard_regular"
+                        android:textColor="@color/gray900"
+                        android:textSize="@dimen/restaurant_info_menu_text_size"
+                        tool:text="카레 염지 순살치킨, 제육볶음, 알리오 올리오 스파게티, 닭강정, 봉황 감자탕" />
+
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginBottom="6dp"
+                    android:background="@color/borderGray" />
+
+                <!--사이드 메뉴-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="top"
+                    android:orientation="horizontal"
+                    android:weightSum="@dimen/restaurant_info_menu_weight_sum">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="@dimen/restaurant_info_menu_title_weight"
+                        android:fontFamily="@font/pretendard_semibold"
+                        android:text="사이드 메뉴"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="@dimen/restaurant_info_menu_text_size"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/restaurant_menu_side_tv"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="@dimen/restaurant_info_menu_content_weight"
+                        android:fontFamily="@font/pretendard_regular"
+                        android:textColor="@color/gray900"
+                        android:textSize="@dimen/restaurant_info_menu_text_size"
+                        tool:text="반찬 3종, 김치, 샐러드\n반찬반찬반찬" />
+
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginBottom="6dp"
+                    android:background="@color/borderGray" />
+
+                <!--후식-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="top"
+                    android:orientation="horizontal"
+                    android:weightSum="@dimen/restaurant_info_menu_weight_sum">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="@dimen/restaurant_info_menu_title_weight"
+                        android:fontFamily="@font/pretendard_semibold"
+                        android:text="후식"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="@dimen/restaurant_info_menu_text_size"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/restaurant_menu_dessert_tv"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="@dimen/restaurant_info_menu_content_weight"
+                        android:fontFamily="@font/pretendard_regular"
+                        android:textColor="@color/gray900"
+                        android:textSize="@dimen/restaurant_info_menu_text_size"
+                        tool:text="토스트(누텔라, 딸기잼), 매실차\n디저트디저트디저트" />
+
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="6dp"
+                    android:background="@color/borderGray" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -208,20 +210,19 @@
             android:id="@+id/restaurant_menu_more_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/restaurant_info_menu_more"
+            android:layout_marginTop="4dp"
             android:fontFamily="@font/pretendard_semibold"
+            android:paddingStart="10dp"
+            android:paddingEnd="0dp"
+            android:paddingBottom="6dp"
+            android:text="@string/restaurant_info_menu_more"
             android:textColor="@color/gray500"
             android:textSize="@dimen/restaurant_info_text_size_more"
             android:textStyle="bold"
-            android:layout_marginTop="4dp"
-            android:paddingBottom="6dp"
-            android:paddingStart="10dp"
-            android:paddingEnd="0dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/restaurant_menu_layout"
             android:visibility="gone"
-            tool:visibility="visible"
-            />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/retaurant_menu_layout"
+            tool:visibility="visible" />
 
         <!--식당 정보 레이아웃-->
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -230,7 +231,9 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/retaurant_menu_layout"
             >
 
             <!--식당 이름-->
@@ -260,7 +263,8 @@
                     android:id="@+id/restaurant_iv"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:scaleType="fitXY" />
+                    android:scaleType="fitXY"
+                    tool:src="@drawable/restaurant_default_image" />
 
             </androidx.cardview.widget.CardView>
 
@@ -412,7 +416,6 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
