--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -55,19 +55,37 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/borderGray"
-                android:layout_marginBottom="6dp"
                 />
 
-            <TextView
-                android:id="@+id/menu_report_description_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:textSize="@dimen/menu_report_description_text_size"
-                android:textColor="@color/black"
-                android:fontFamily="@font/pretendard_regular"
-                android:layout_marginBottom="6dp"
-                />
+           <LinearLayout
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:orientation="horizontal"
+               android:layout_gravity="center"
+               android:layout_marginVertical="4dp"
+               >
+
+               <TextView
+                   android:id="@+id/menu_report_description_tv"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:textSize="@dimen/menu_report_description_text_size"
+                   tool:text="가나다라마바사아자차카타파하"
+                   android:textColor="@color/gray900"
+                   android:fontFamily="@font/pretendard_regular"
+                   android:layout_gravity="center_vertical"
+                   />
+
+               <ImageView
+                   android:id="@+id/menu_report_info_iv"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:src="@drawable/menu_report_info"
+                   android:layout_gravity="center_vertical"
+                   android:padding="6dp"
+                   />
+
+           </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
