--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,4 +19,10 @@
         <item name="android:layout_marginStart">4dp</item>
         <item name="android:layout_marginEnd">4dp</item>
     </style>
+    <style name="Theme.MenuMonya.SplashScreen" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/white</item>
+        <item name="windowSplashScreenAnimatedIcon">@mipmap/logo_round</item>
+        <item name="postSplashScreenTheme">@style/Theme.MenuMonya</item>
+        <item name="windowSplashScreenAnimationDuration">1000</item>
+    </style>
 </resources>
